--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
-*{
-    padding: 0;
-    margin: 0;
-}
 
-.attribution {
-    font-size: 11px;
-    text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
-  .attribution a {
-    color: hsl(228, 45%, 44%);
+body {
+    font-family: "Fraunces", serif;
+    background-color: #fff;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
 
   
