--- a/style.css
+++ b/style.css
@@ -17,6 +17,74 @@ body {
 
   }
 
+  .card {
+    border-radius: 10px;
+    display: flex;
+    max-width: 660px;
+    background-color: white;
+    margin: 0 1rem;
+  }
+
+  .imgcontainer {
+    width: 50%;
+  }
+
+  .imgcontainer img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  .details-container {
+    width: 50%;
+    padding: 2rem;
+  }
+
+  .details-container .name {
+    color: rgba(29, 126, 10, 0.866);
+    padding-right: 2rem;
+    margin-bottom: 1.75rem;
+  }
+
+  .details-container .description {
+    font-family: "Montserrat";
+    font-size: 14px;
+    color: hsl(225, 7%, 43%);
+    line-height: 22px;
+    margin-bottom: 1.75rem;
+  }
+
+  .perfume {
+    font-family: "Montserrat";
+    letter-spacing: 3px;
+    font-size: 14px;
+    color:hsl(225, 20%, 32%);
+    margin-bottom: 1.75rem;
+  }
+
+  .price-container {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin-bottom: 1.75rem;
+  }
+
+  .price-container .current-price {
+    color: hsl(158, 36%, 37%);
+  }
+
+  .price-container .old-price {
+    font-family: "Montserrat";
+    color: hsl(228, 12%, 48%);
+    text-decoration: line-through;
+  }
+  
+  
+
+
+  
   
   
 
