--- a/style.css
+++ b/style.css
@@ -80,12 +80,73 @@ body {
     color: hsl(228, 12%, 48%);
     text-decoration: line-through;
   }
+
+  .details-container .btn {
+    width: 100%;
+    border: 0;
+    outline: 0;
+    background-color: rgb(55, 139, 148);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-family: "Montserrat";
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  .details-container .btn:hover {
+    background-color: rgb(127, 97, 51);
+  }
+  
+
+  @media only screen and (max-width: 550px) {
+    .card {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .imgcontainer {
+        width: 100%;
+        height: 40%;
+    }
+
+    .imgcontainer img {
+        content: url(./images/image-product-mobile.jpg);
+    }
+.card {
+    flex-direction: column;
+}
+.details-container {
+    width: 100%;
+}
+
+.details-container .name {
+    padding-right: 0;
+}
+.imgcontainer img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0px;
+}
+
+
+
+  
+
+  
+
+
+
+  
+
+
+
+  
   
   
 
 
-  
-  
-  
-
-
+  }
